# general-perceivers

./: .buildinfo  .gitignore  README.md  genindex.html  gperc.arrow.html  gperc.cli.html  gperc.configs.html  gperc.data.html  gperc.html  gperc.models.html  gperc.trainer.html  gperc.utils.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  remote.html  requirements.txt  search.html  searchindex.js  setup.py  stories.1.html  stories.2.html  stories.html  testing.html  tests.py
.github/workflows/: update-docs.yaml
_modules/: index.html
_modules/gperc/: cli.html  configs.html  data.html  models.html  trainer.html  utils.html
_sources/: gperc.cli.rst.txt  gperc.data.rst.txt  gperc.rst.txt  gperc.trainer.rst.txt  index.rst.txt  modules.rst.txt  remote.rst.txt  stories.1.rst.txt  stories.2.rst.txt  stories.rst.txt
_static/: documentation_options.js
distributed/: README.md  cifar_ddp.py  pipe.py  torch_pipe_dist.py
docs/: gperc.rst  modules.rst
docs/source/: conf.py  gperc.arrow.rst  gperc.configs.rst  gperc.models.rst  gperc.rst  gperc.utils.rst  index.rst  stories.1.rst  (+4 more)
examples/: Cifar10-ByTe.ipynb  grockking.py  grokking.py  train_binary.py  train_cifar.py  train_gtzan.py  train_lm.py  train_rl.py  train_segnet.py  train_time_series.py  train_titanic.py  train_transfer.py  train_video.py
gperc/: __init__.py  __main__.py  arrow.py  cli.py  configs.py  data.py  models.py  tera.py  trainer.py  utils.py
remote/: README.md  model.py  orchestration.py  s.py  test.py
research/: README.md
utils/: __init__.py  generation.py
(+18 files in other folders)
