[tool.poetry]
name = "gperc"
version = "0.2"
description = "General purpose perceiver architectures!"
authors = ["yashbonde <bonde.yash97@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.6"
torch = "^1.9.0"
numpy = "^1.19.0"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
